--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -5,7 +5,7 @@ encryption = "gpg"
     secrets = "error"
 
 [edit]
-    command = "code"
+    command = "Code - Insiders"
     args = ["--wait"]
     apply = true
 
